...
            android:theme="@style/editTextLogin"
            app:layout_constraintEnd_toStartOf="@+id/ivPasswordToggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/wrapped_ic_lock_black"
                android:drawablePadding="@dimen/login_input_layout_drawable_padding"
                android:ems="10"
...
            android:background="@color/create_order_fields_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="@dimen/general_button_height"
            android:layout_marginTop="@dimen/login_btnLogin_margin_top"
            android:background="@drawable/btn_bg_rounded"
            android:enabled="false"
...
