...
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help_selector"
        android:contentDescription="@string/LNG_MENU_HELP"
        android:title="@string/LNG_MENU_HELP" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_selector"
        android:contentDescription="@string/LNG_MENU_SETTINGS"
        android:title="@string/LNG_MENU_SETTINGS" />
</menu>

