...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_settings_padding_bottom">

            <com.kg.gettransfer.presentation.ui.custom.SettingsFieldVerticalPicker
                android:id="@+id/settingsProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingsTitlePicker="@string/LNG_LOGIN_LOGIN_TITLE"/>

            <com.kg.gettransfer.presentation.ui.custom.SettingsFieldHorizontalPicker
                android:id="@+id/settingsCurrency"
...
